app/assets/stylesheets/partials/user-cover-image.css.scss
.user-cover {
  height: 360px;
  overflow: hidden;
  position: relative;

  .cover-photo {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 360px;
    width: 100%;
    position: relative;
    .edit-cover {
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      line-height: 95px;
      text-align: center;
      height: 100px;
      color: #fff;
      background: rgba(0,0,0,.7);
      transition: .2s ease-in;
      display: none;
      &:hover {
        background: rgba(0,0,0,.8);
      }
      label {
        width: 100%;
        &:hover {
          cursor: pointer;
        }
      }
    }
  }

  &.edit-menu {
    .edit-cover {
      display: block;
    }
  }

  .cover-overlay-wrapper {
    position: absolute;
    bottom: 0;
    height: 115px;
    width: 100%;
    overflow: hidden;
  }

  .dark-overlay {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 115px;
    background: #000;
    background: rgba(0,0,0,.35);
    z-index: 2;
  }

  .cover-overlay {
    position: absolute;
    bottom: 0;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 360px;
    width: 100%;
    filter: blur(3px);
    -webkit-filter: blur(3px);
    -moz-filter: blur(3px);
    -o-filter: blur(3px);
    -ms-filter: blur(3px);
    filter: url("data:image/svg+xml;utf9,  <svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='3'%20/></filter></svg>#blur");
   filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
    z-index: 1;
  }
}



/* User Cover Options */
.user-cover-options {
  color: #fff;
  position: absolute;
  width: 100%;
  top: -145px;
  z-index: 2;

  .edit-avatar {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0,0,0,.7);
    border-radius: 3px;
    text-align: center;
    transition: .2s ease-in;
    display: none;
    &:hover {
      background: rgba(0,0,0,.8);
    }
    label {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      padding-top: 12px;
      cursor: pointer;
      .fa {
        display: block;
      }
    }
  }

  &.edit-menu {
    .edit-cover, .edit-avatar {
      display: block;
    }
  }

  .user-wrapper {
    padding-left: 0;

    .account-info {
      padding: 5px;
      float: left;
      textarea {
        border: none;
        color: #333;
        width: 470px;
        background: rgba(255,255,255,.8);
        padding: 0 10px;
      }
      @media (max-width: 1200px) { padding-left: 30px; }
      @media (max-width: 990px) { padding-left: 15px; }
      @media (max-width: 850px) and (min-width: 694px) {
        position: relative;
        top: 30px;
        overflow: auto;
        height: 110px;
        .username {
          margin-top: 10px;
        }
      }
      @media (max-width: 768px) { padding-left: 15px; }
      @media (max-width: 694px) {
        width: 100%;
      }
    }
  }

  .follow-widgets {
    float: right;
    display: inline-block;
    position: relative;
    top: 60px;
    @media (max-width: 694px) {
      width: 100%;
      top: 0;
      float: left;
      padding-left: 15px;
    }
    li {
      text-align: center;
      margin-right: 20px;
      &:last-child {
        margin-right: 0;
      }
    }
    .follow-title {
      text-transform: uppercase;
      font-family: $headerFontFamily;
      font-weight: normal;
      opacity: .6;
      color: #fff;
    }
    .follow-count {
      margin-top: 5px;
      color: #fff;
    }
  }
  

  .large-avatar {
    position: relative;
    float: left;
    @media (max-width: 990px) {
      float: none;
    }

    img { 
      border-radius: 3px; 
      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
      max-width: 120px;
    }
  }

  .user-avatar {
    width: 9.666667%;
    top: 46px;
    @media (max-width: 990px) {
      position: absolute;
      width: 100%;
      top: -70px;
      text-align: center;
    }
    @media (max-width: 768px) {
      top: -115px;
      left: 0px;
      bottom: auto;
    }
  }

  .account-wrapper {
    width: 90.333333%;
    @media (max-width: 990px) {
      width: 100%;
    }
    @media (max-width: 694px) {
      height: 110px;
      overflow: auto;
      position: relative;
      top: 30px;
      .username {
        margin-top: 10px;
      }
    }
  }

  .user-bio {
    max-width: 460px;
    @media (max-width: 850px) {
      max-width: 350px;
    }
    @media (max-width: 694px) {
      width: 100%;
    }
  }



  .user-cover-options .account-info {
    padding-left: 25px;
  }

  .username {
    margin-top: 39px;
  }

  .fa-exchange, .fa-heart-o, .fa-envelope-o {
    @media (max-width: 400px) {
      display: none;
    }
  }

  .follow-button {
    background: #fff;
    color: #333;
    font-size: 15px;
    padding: 10px 25px;
    padding: 8px 25px;
    position: relative;
    top: 15px;
    transition: .2s ease-in;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    .fa {
      margin-right: 5px;
      font-size: 12px;
    }
    &:hover {
      background: darken(#fff, 10);
    }
    &.unfollow {
      background: #E2E2E2;
      color: #737373;
      &:hover {
        background: darken(#E2E2E2, 10);
      }
    }
    &.save {
      background: #f89774;
      color: #fff;
      &:hover {
        background: darken(#f89774, 10);
      }
    }
  }
}


/* User Cover for Review Page */
.series-content {
  .review-cover {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    .user-cover {
      height: 150px;
    }
    .cover-overlay {
      bottom: -45px;
    }
  }

  .container.relative {
    height: 150px;
  }

  .profile-navigation {
    position: absolute;
    left: 0;
    right: 0;
  }

  .user-cover-options {
    top: 35px;
    .username {
      margin-top: 55px;
      margin-left: 15px;
    }
  }

  .user-wrapper {
    width: 100%;
    .account-info {
      float: left;
      @media (max-width: 990px) {
        padding-left: 110px;
      }
    }
  }

  .follow-button {
    font-size: 16px;
    background: #eee;
    color: #333;
    top: 64px;
    right: 0;
    padding-left: 40px;
    padding-right: 40px;
  }
}

